--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,11 @@ app.jwt-expiration-milliseconds=60480000
 server.tomcat.max-threads=500
 #
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 
 
 #<dependency>
