--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>com.opencsv</groupId>
+    		<artifactId>opencsv</artifactId>
+   			<version>5.5.2</version>
+		</dependency>
+
+
+		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+   			 <version>3.1.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
